Fix for css columns not wrapping correctly on Firefox

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -52,6 +52,7 @@
     -moz-column-break-inside: avoid;
     -ms-column-break-inside: avoid;
     -o-column-break-inside: avoid;
+    overflow: hidden;
     page-break-inside: avoid;
     border: 2px solid darken(@color-swatch1, 10%);
     .post-content {
